Can view player page with won/loss pie graph

--- a/doc/Description
+++ b/doc/Description
@@ -13,7 +13,7 @@ UC3: Everyone can view statistics over:
 	|Done| - Player with most played games
 	- Highest/Lowest score for individual round types.
 	
-UC4: Johnny wants to be able to view a specific match and see the results.
+|Done| UC4: Johnny wants to be able to view a specific match and see the results.
 	
 	
 
