Project liftet to Django 1.11 and migrated to being GAE friendly

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 #################
 
 settings.py
-wsgi.py
 /logs
 /static
+/env
+/lib
+.idea
+/mokstats/migrations
 
 #################
 ## Eclipse
@@ -72,3 +75,5 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+.idea/vcs.xml
+.idea/vcs.xml
